--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
         "@tailwindcss/typography": "^0.5.0",
         "alpinejs": "^3.0.6",
         "autoprefixer": "^10.4.7",
-        "axios": "^0.21",
+        "axios": "^1.9.0",
         "bootstrap": "^5.1.3",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.4.14",
+        "resolve-url-loader": "^5.0.0",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
         "tailwindcss": "^3.1.0"
     },
     "dependencies": {
-        "sweetalert2": "^11.21.1"
+        "sweetalert2": "^11.21.2"
     }
 }
