--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": "^7.3|^8.0",
         "doctrine/dbal": "^3.9",
-        "guzzlehttp/guzzle": "^7.0.1",
+        "fruitcake/laravel-cors": "^3.0",
+        "guzzlehttp/guzzle": "^7.9",
         "jeroennoten/laravel-adminlte": "^3.13",
         "laravel/framework": "^8.75",
         "laravel/jetstream": "^2.9",
